@@ -4,6 +4,7 @@ RMD160 85df32ebf5d383056f641e829fe8fbc63688d2bc files/eselect-emacs-0.3-r119.pat
 SHA256 1eff3f70f532430f9314de674e95a978a49e918f1b2b507871c51a56201dbe0e files/eselect-emacs-0.3-r119.patch 1604
 DIST eselect-emacs-0.5.tar.bz2 18012 RMD160 7792694a73f5e9df60edf6e523072d9dc6a61641 SHA1 ae6bfe84b3d0e995308fe35a336f18136c457228 SHA256 8aa1f5df228aa764dbdfd41a2ac8f5745c4bfbb3d6a5caa28b189c47daea7e5e
 DIST eselect-emacs-0.6.tar.bz2 18028 RMD160 e959c1961c8239ef89e70d91f2acc5e492a8ec6e SHA1 84a2b8ad383a35891d7e03f52a888a37538c7d5b SHA256 1aebce57d260370161cc3b429d7d8d9e364e9ff7d750e3f514e1566ebd23faec
+DIST eselect-emacs-0.7.tar.bz2 18714 RMD160 5207a81737e43d72acc19b21047c209032cd2889 SHA1 d3cd00e93522cc1ec52ac7350d271e3d097a84c8 SHA256 4b375a5ebfe0020e1f49fe1eae5efb069748dc854090ed376a0854f0fbec3e87
 EBUILD eselect-emacs-0.5.ebuild 731 RMD160 aa852751de38178de1072f5b521b1cca1aecbae3 SHA1 15d124fbb2fd978dbc8961f976edf5998f958be5 SHA256 2ddfe609563e812587a622b4eaf7b018e8f38482d53b928418c2a83686259ea2
 MD5 727cd3ce6ef35cf62e2fa8be48783170 eselect-emacs-0.5.ebuild 731
 RMD160 aa852751de38178de1072f5b521b1cca1aecbae3 eselect-emacs-0.5.ebuild 731
@@ -12,10 +13,14 @@ EBUILD eselect-emacs-0.6-r1.ebuild 972 RMD160 d6ff23ba3f0105d4eaaeb8d9f843c45706
 MD5 73dfac46c2d23b79693ee55da7dbff6d eselect-emacs-0.6-r1.ebuild 972
 RMD160 d6ff23ba3f0105d4eaaeb8d9f843c45706fc42ac eselect-emacs-0.6-r1.ebuild 972
 SHA256 2ddb6c9240447e8c223c906f9cdbbf625aad1e7173e03bc382c736b9c67c0f47 eselect-emacs-0.6-r1.ebuild 972
-MISC ChangeLog 3363 RMD160 af5f5125931b7542425667b091eee290fa2de906 SHA1 c5b9ca40964c269bf44bac787723e0f6a8bc5682 SHA256 bb81f3fdb056ee64dbd928eb2131df04e77c6f54de3f6354e752a4f71f9889f3
-MD5 9cef9d257b43f4c1b323b56655a6ac42 ChangeLog 3363
-RMD160 af5f5125931b7542425667b091eee290fa2de906 ChangeLog 3363
-SHA256 bb81f3fdb056ee64dbd928eb2131df04e77c6f54de3f6354e752a4f71f9889f3 ChangeLog 3363
+EBUILD eselect-emacs-0.7.ebuild 776 RMD160 a4f7f1697df6c7a2347e7c5b5fe4b9e16954711e SHA1 65aba42ded69b97aeb9061c58c726218e94cd785 SHA256 672e33a19bade3ac90beceb998d3f6c656b4289820187128c7059fca639f06bc
+MD5 c0d59ec2ca8fdd5d068300eac2f6388c eselect-emacs-0.7.ebuild 776
+RMD160 a4f7f1697df6c7a2347e7c5b5fe4b9e16954711e eselect-emacs-0.7.ebuild 776
+SHA256 672e33a19bade3ac90beceb998d3f6c656b4289820187128c7059fca639f06bc eselect-emacs-0.7.ebuild 776
+MISC ChangeLog 3464 RMD160 9d0cce31ab5ed2642be5c3ae86a65811e849f560 SHA1 c09dcfb357f43289027f666ce1387f943d2496f5 SHA256 151fe99546f37ba034b50828227d124928b3961fb862ac3fc033bd88a290cb95
+MD5 b62762c37952f77fc78c45cf7dbc75e2 ChangeLog 3464
+RMD160 9d0cce31ab5ed2642be5c3ae86a65811e849f560 ChangeLog 3464
+SHA256 151fe99546f37ba034b50828227d124928b3961fb862ac3fc033bd88a290cb95 ChangeLog 3464
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -26,3 +31,6 @@ SHA256 6289a266e5a2bd2ef259f6cd8eec0c4400755c08b193781f4135d125322a0f5d files/di
 MD5 6445ccb21cefa295354d0188abb45ca4 files/digest-eselect-emacs-0.6-r1 253
 RMD160 671322e7913c3c4719bd43112a42cb67b122ebd2 files/digest-eselect-emacs-0.6-r1 253
 SHA256 bf3c3c51ff5f64c8ba457ac72ae1e0d4dacc9fcac19f1d484b9cb7aad3661fe0 files/digest-eselect-emacs-0.6-r1 253
+MD5 f50c79be518d64dee35306ae4af77209 files/digest-eselect-emacs-0.7 253
+RMD160 2bfd1b05577deeef7d92eaff3c9023ca4076c9a8 files/digest-eselect-emacs-0.7 253
+SHA256 c9fb391132db146206cf99f533e7ee26cd21c5033eb720c71dfab7e96c558a12 files/digest-eselect-emacs-0.7 253
